--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="styles.css" />
       </head>
       <body>
-        <nav class="nav">Login</nav>
+        <a href="loginpage.html">Login</a>
+        <a href="register.php">register</a>
         <nav class="nav">About Us</nav>
         <nav class="nav">CONTACT</nav>
         <h1 class="main">MedConnect</h1>
