first draft of register

--- a/medconnect/index.html
+++ b/medconnect/index.html
@@ -65,7 +65,7 @@
       <h1 class="hg3">Want to use our services?</h1>
       <p class="p3">Sign-up today! It's 100% free!</p>
       <div class="custombutton-container">
-        <a href="register.php"><button type="button" class="custombutton" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 290px;">GET STARTED NOW</button></a>
+        <a href="register.html"><button type="button" class="custombutton" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 290px;">GET STARTED NOW</button></a>
     </div>
     </div>
 
