--- a/medconnect/index.html
+++ b/medconnect/index.html
@@ -18,6 +18,7 @@
         <nav>
             <a href="aboutus.html" class="navbtn">ABOUT US</a>
             <a href="contact.html" class="navbtn">CONTACT</a>
+            <a href="register.php" class="navbtn">REGISTER</a>
             <a href="loginpage.html">
               <button type="button" class="custombutton">LOG IN</button>
             </a>
