--- a/medconnect/register.html
+++ b/medconnect/register.html
@@ -38,11 +38,12 @@ session_start();
             </div>
             <div class="entryarea2">
             <div class="labelline">INSTITUTION</div>
-            <select class="inputboxname">
-                <option value="" disabled selected>Select an institution</option>
-                <option value="klinikum">Klinikum München</option>
-                <option value="hospital">General Hospital</option>
-            </select>
+            <div class="formcolumn">
+                <div>
+                    <div class="labelline">INSTITUTION</div>
+                    <input class="rest" type="text" name="institution" required="required" placeholder="Klinikum München">
+                </div>
+            </div>
             </div>
             <div class="formcolumn">
                 <div>
