--- a/medconnect/loginpage.html
+++ b/medconnect/loginpage.html
@@ -11,7 +11,7 @@
 <body>
     <form action="authenticate.php" method="POST">
         <div class="imgcontainer">
-          <img src="medical_solutions_logo.jpg" alt="Avatar" class="center" width="300" height="200">
+          <img src="Logo.svg" alt="Avatar" class="center" width="300" height="200">
         </div>
       
         <div class="container">
