--- a/medconnect/index.html
+++ b/medconnect/index.html
@@ -16,7 +16,7 @@
             <object data="Logo.svg" height="30vh"> </object>
         </a>
         <nav>
-            <a href="aboutus.html" class="navbtn">ABOUT US</a>
+            <a href="about_us.html" class="navbtn">ABOUT US</a>
             <a href="contact.html" class="navbtn">CONTACT</a>
             <a href="register.php" class="navbtn">REGISTER</a>
             <a href="loginpage.html">
