--- a/medconnect/loginpage.html
+++ b/medconnect/loginpage.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEDCONNECT - LOGIN</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesdraft.css">
 </head>
 <body>
     <form action="authenticate.php" method="POST">
