show/hide toggle

--- a/medconnect/register.html
+++ b/medconnect/register.html
@@ -62,13 +62,12 @@ session_start();
                 <div>
                     <div class="labelline">PASSWORD</div>
                 <div class="password-input-box">
-                        <input class="rest" type="password" name="u_password" required="required" placeholder="Choose a password" style="padding-right: 45px;">
+                        <input  type="password" placeholder="Choose a password" class="password-input">
                         <i class="fa-solid fa-eye show-password" style="color: #4f4f4f;"></i>
                 </div></div>
                     <div class="password-checklist">
-                        
+                        <h3 class="checklist-title">Password must:</h3>
                         <ul class="checklist">
-                            <h3 class="pass-checklist">Password must:</h3>
                             <li class="list-item">be at least 8 characters long</li>
                             <li class="list-item">include both Lower and Upper case letters</li>
                             <li class="list-item">include Numbers</li>
