--- a/medconnect/new_patient.html
+++ b/medconnect/new_patient.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesdraft.css">
     <title>New Patient Form</title>
 </head>
 <body>
@@ -11,6 +11,15 @@
         <a href="index.html" >
             <object data="Logo.svg" height="20vh" style="margin-top: 5vh; margin-left: 6vh;"> </object>
         </a>
+        <!--pages are yet to be created-->
+        <nav>
+            <a href="stillnopage.html" class="navbtn">My Profile</a>
+            <a href="contact.html" class="navbtn">My Patients</a>
+            
+            <a href="loginpage.html">
+              <button type="button" class="custombutton">LOG OUT</button>
+            </a>
+        </nav> 
     </header>
 
     <h2 class="h2">New Patient Form</h2>
