some minor changes

--- a/medconnect/show_patient.html
+++ b/medconnect/show_patient.html
@@ -13,7 +13,7 @@
         </a>
         <!--pages are yet to be created-->
         <nav>
-            <a href="stillnopage.html" class="navbtn">My Profile</a>
+            <a href="loggedin.php" class="navbtn">My Profile</a>
             <a href="contact.html" class="navbtn">My Patients</a>
             <a href="loginpage.html">
               <button type="button" class="custombutton">LOG OUT</button>
