--- a/medconnect/index.html
+++ b/medconnect/index.html
@@ -16,9 +16,9 @@
             <object data="Logo.svg" height="30vh"> </object>
         </a>
         <nav>
-            <a href="about_us.html" class="navbtn">ABOUT US</a>
-            <a href="contact.html" class="navbtn">CONTACT</a>
-            <a href="register.html" class="navbtn">REGISTER</a>
+            <a href="about_us.html">ABOUT US</a>
+            <a href="contact.html">CONTACT</a>
+            <a href="register.html">REGISTER</a>
             <a href="loginpage.html">
               <button type="button" class="custombutton">LOG IN</button>
             </a>
