--- a/medconnect/register.html
+++ b/medconnect/register.html
@@ -13,7 +13,7 @@ session_start();
 <body>
     <header>
         <a href="index.html" >
-            <object data="Logo.svg" height="20vh" style="margin-top: 5vh; margin-left: 6vh;"> </object>
+            <object data="Logo.svg" height="20vh" style="margin-top: 2vh; margin-left: 6vh;"> </object>
         </a>
     </header>
     <div>
@@ -68,8 +68,9 @@ session_start();
                             <h3 class="checklist-title">Password must:</h3>
                             <ul class="checklist">
                                 <li class="list-item">be at least 8 characters long</li>
-                                <li class="list-item">include both Lower and Upper case letters</li>
                                 <li class="list-item">include Numbers</li>
+                                <li class="list-item">include at least on Lowercase letter</li>
+                                <li class="list-item">include at least on Uppercase letter</li>
                                 <li class="list-item">include Symbols</li>
                             </ul>
                         </div>
@@ -77,10 +78,10 @@ session_start();
                 </div>
             </div>
             <div class="formcolumn">
-                <button type="submit" formaction="insert.php" class="custombutton" style="width: 206px; height: 55px; margin-left: 9vw; margin-top: 1vh;">REGISTER</button>
+                <button type="submit" formaction="insert.php" class="custombutton" style="width: 206px; height: 55px; margin-left: 9vw; margin-top: 1vh; cursor: pointer;">REGISTER</button>
                 <p class="accepting">By signing up, you agree to MEDCONNECTS <a href="terms.html" style="color: #2D9CDA;">Terms</a>, data and <a href="privacypolicy.html" style="color: #2D9CDA;">Privacy Policy</a>.</p>
             </form>
-            </div>
+    
             </div>
         <div class="column">
             <div class="rightsideofregister">
@@ -90,6 +91,7 @@ session_start();
             <h2 style="margin-top: 10px;">Health records made easy.</h2>
             </div>
         </div>
+    </div>
 
 
 </body>
