--- a/medconnect/register.html
+++ b/medconnect/register.html
@@ -40,7 +40,7 @@ session_start();
                 <div class="formcolumn">
                     <div>
                         <div class="labelline">INSTITUTION</div>
-                        <input class="rest" type="text" name="institution" required="required" placeholder="Klinikum München">
+                        <input class="rest" type="text" name="u_institution" required="required" placeholder="Klinikum München">
                     </div>
                 </div>
                 <div class="formcolumn">
@@ -59,7 +59,7 @@ session_start();
 
                         <div class="labelline">PASSWORD</div>
                         <div class="password-input-box">
-                            <input  type="password" placeholder="Choose a password" class="password-input">
+                            <input  type="password" placeholder="Choose a password" class="password-input" name="u_password">
                             <i class="fa-solid fa-eye show-password" style="color: #4f4f4f;"></i>
                         </div>
 
@@ -78,7 +78,7 @@ session_start();
                 </div>
             </div>
             <div class="formcolumn">
-                <button type="submit" formaction="insert.php" class="custombutton" style="width: 206px; height: 55px; margin-left: 9vw; margin-top: 1vh; cursor: pointer;">REGISTER</button>
+                <button type="submit" class="custombutton" style="width: 206px; height: 55px; margin-left: 9vw; margin-top: 1vh; cursor: pointer;">REGISTER</button>
                 <p class="accepting">By signing up, you agree to MEDCONNECTS <a href="terms.html" style="color: #2D9CDA;">Terms</a>, data and <a href="privacypolicy.html" style="color: #2D9CDA;">Privacy Policy</a>.</p>
             </form>
     
