--- a/medconnect/index.html
+++ b/medconnect/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEDCONNECT</title>
     <link rel="stylesheet" href="stylesdraft.css" />
+    <script src="script.js" defer></script>
     <!--<link rel="stylesheet" href="bootstrap.css" />-->
     
-    
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-banner" style="display: block; position: fixed; bottom: 0; left: 0; width: 100%; background-color: #156324; padding: 10px; text-align: center;">
+      <p>This website uses cookies. By continuing to use this site, you accept our use of cookies.</p>
+      <button onclick="acceptCookies()" style="background-color: #4caf50; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Accept</button>
+      <button onclick="rejectCookies()" style="background-color: #ff0000; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; margin-left: 10px;">Reject</button>
+  </div>
+
 </head>
 <body>
 
