Minor bug fixes with spacing and Logo's link to homepage

--- a/medconnect/index.html
+++ b/medconnect/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <a href="index.html" >
-            <object data="Logo.svg" height="30vh"> </object>
+            <object data="Logo.svg" height="30vh" style="pointer-events: none;"> </object>
         </a>
         <nav>
             <a href="aboutus.html" class="navbtn">ABOUT US</a>
