--- a/medconnect/loginpage.html
+++ b/medconnect/loginpage.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="stylesdraft.css">
 </head>
 <body class = "logbody">
-    <header>
-        <a href="Logindraft.html" >
-            <object data="Logo.svg" height="30vh"> </object>
+    <header style="margin-top: 1vh;">
+        <a href="index.html">
+            <object data="Logo.svg" height="30vh" style="pointer-events: none;"> </object>
         </a>
         <nav>
 
@@ -18,7 +18,7 @@
             </a>
         </nav>
     </header>
-    <div class="paneloverlay" style="margin-left: 5vw; margin-top: 6vw;">
+    <div class="paneloverlay" style="margin-left: 5vw; margin-top: 10vh;">
         <div>
             <h1 >Login to your portal</h1>
         </div>
