--- a/medconnect/register.html
+++ b/medconnect/register.html
@@ -13,7 +13,7 @@ session_start();
 <body>
     <header>
         <a href="index.html" >
-            <object data="Logo.svg" height="20vh" style="margin-top: 2vh; margin-left: 6vh;"> </object>
+            <object data="Logo.svg" height="20vh" style="margin-top: 2vh; margin-left: 6vh; pointer-events: none;"> </object>
         </a>
     </header>
     <div>
