--- a/medconnect/loginpage.html
+++ b/medconnect/loginpage.html
@@ -29,14 +29,14 @@
                         <div>
                             <div>
                                 <div class="labelline" style="margin-left: 0vw;">EMAIL ADDRESS</div>
-                                <input class="rest" type="text" name="u_email_address" required="required" placeholder="max.mustermann@email.com" style="margin-left: 0vw;">
+                                <input class="rest" type="text" name="email_address" required="required" placeholder="max.mustermann@email.com" style="margin-left: 0vw;">
                             </div>
                         </div>
                         <div>
                             <div>
                                 <div class="labelline" style="margin-left: 0vw;">PASSWORD</div>
                                 <div>
-                                    <input  type="password" placeholder="Password" class="rest" name="u_password" style="margin-left: 0vw; padding-right: 15px;">
+                                    <input  type="password" placeholder="Password" class="rest" name="password" style="margin-left: 0vw; padding-right: 15px;">
                                     <i class="fa-solid fa-eye show-password" style="color: #4f4f4f;"></i>
                                 </div>
                             </div>
