--- a/medconnect/update_patient.html
+++ b/medconnect/update_patient.html
@@ -13,10 +13,10 @@
         </a>
         <!--pages are yet to be created-->
         <nav>
-            <a href="stillnopage.html" class="navbtn">My Profile</a>
-            <a href="contact.html" class="navbtn">My Patients</a>
+            <a href="loggedin.php" class="navbtn">My Profile</a>
+            <a href="show_patient.html" class="navbtn">My Patients</a>
             
-            <a href="loginpage.html">
+            <a href="logout.php">
               <button type="button" class="custombutton">LOG OUT</button>
             </a>
         </nav>
