login-here-login-there-login-everywhere

--- a/medconnect/loginpage.html
+++ b/medconnect/loginpage.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
-                    <button type="submit" class="custombutton" style="width: 206px; height: 55px; margin-top: 5vh; align-items: center;cursor: pointer;">Login</button>
+                    <button type="submit" class="custombutton" style="width: 206px; height: 55px; margin-top: 5vh; align-items: center;cursor: pointer;">LOG IN</button>
                     <p class="accepting" style="margin-left: 0vw;">Don't have an account? <a href="register.html" style="color: #2D9CDA; font-size: 0.8vw;">Create new account</a></p>
                 </div>
             </div>
