--- a/medconnect/index.html
+++ b/medconnect/index.html
@@ -23,7 +23,7 @@
             <object data="Logo.svg" height="30vh" style="pointer-events: none;"> </object>
         </a>
         <nav>
-            <a href="aboutus.html" class="navbtn">ABOUT US</a>
+            <a href="about_us.html" class="navbtn">ABOUT US</a>
             <a href="contact.html" class="navbtn">CONTACT</a>
             <a href="register.html" class="navbtn">REGISTER</a>
             <a href="loginpage.html">
