--- a/medconnect/index.html
+++ b/medconnect/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <a href="index.html" >
-            <object data="Logo.svg" hei5ght="30vh" style="pointer-events: none;"> </object>
+            <object data="Logo.svg" height="30vh" style="pointer-events: none;"> </object>
         </a>
         <nav>
             <a href="about_us.html" class="navbtn">ABOUT US</a>
