--- a/medconnect/contact.html
+++ b/medconnect/contact.html
@@ -12,7 +12,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #0d5106;
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -57,6 +57,7 @@
 <body>
 
 <header>
+
     <h1>Contact Us</h1>
 </header>
 
